--- a/meeee/style.css
+++ b/meeee/style.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font: helvetica;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -48,9 +48,9 @@ table {
 }
 
 /* Add Styles Here */
-body { font-family:Brandon Grotesque; font-size:14px; }
+body { font-family:Helvetica ; font-size:14px; }
 section#content { margin:0 auto; width:960px; padding:20px 0px; }
 
 h1 { font-size:48px; font-weight:bold; color:black; text-align:center; }
-h2 { font-size:36px; font-weight:regular; color:black; text-align:center; }
+h2 { font-size:36px; font-weight:bold; color:black; text-align:center; }
 p { padding-bottom:10px; }
