--- a/meeee/style.css
+++ b/meeee/style.css
@@ -50,8 +50,11 @@ table {
 /* Add Styles Here */
 body { font-family:Helvetica ; font-size:14px; background-color:gray; }
 section#content { margin:0 auto; width:960px; padding:40px 0px; }
-section#picture IMG.displayed {display: block; margin-left: auto; margin-right:auto;}
-
+section#picture img.center{
+				display: block;
+				margin-left: auto;
+				margin-right:auto;
+				}
 h1 { font-size:48px; font-weight:bold; color:white; text-align:center; word-spacing:4px; }
 h2 { font-size:36px; font-weight:bold; color:white; text-align:center; }
 p { padding-bottom:10px; text-align:center; }
