--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -73,4 +73,32 @@ table {
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
+ul{
+	display: inline;
+	font-family: Georgia;
+	text-transform:uppercase;
+	list-style-type: disc;
+	border-top: 5px;
+	border-bottom: 5px;}
 
+li{display:inline;
+	color:black;}
+a:link{color:black;
+	   text-decoration:none;
+   		margin: 10px;}
+ul{padding: 5px;
+	border: 10px 0px 10px 0px black;
+	margin: 5px;}
+p{width:350px;
+  font-family: Georgia;
+  font-size: 12px;
+  line-height:95%;}
+h2 {font-family: Georgia;
+	font-size: 18px;
+	font-weight:bold;
+}
+
+#content {
+	font-size:10px
+	float:left;
+}
